--- a/strangergenerator.html
+++ b/strangergenerator.html
@@ -1,3 +1,4 @@
+<div id="credit">Created by Zami Novack from code by Chloe Umble and Daniel Eden</div>
 <div class="st">
   <i class="decorator full"></i>
   <span id="word1" class="w full js-w1">
@@ -16,6 +17,13 @@
 	 padding: 0;
 	 position: relative;
 	 box-sizing: border-box;
+}
+#credit {
+	 Position: fixed;
+  	 bottom: 5px;
+  	 right: 5px;
+  	 color: red;
+ 	 font-size: 10px;
 }
  .button {
 	 position: absolute;
