--- a/strangergenerator.html
+++ b/strangergenerator.html
@@ -1,3 +1,6 @@
+<head>
+<title>Stranger Things Knockoff Generator</title>
+</head>
 <div id="credit">Created by Zami Novack from code by Chloe Umble and Daniel Eden</div>
 <div class="st">
   <i class="decorator full"></i>
