--- a/strangergenerator.html
+++ b/strangergenerator.html
@@ -116,6 +116,18 @@
 	 opacity: 1;
 	 outline: none;
 }
+@media only screen and (max-width: 600px) {
+.st {
+    font-size: 3em;
+}
+span#word2 {
+    margin-top: -7px;
+}
+.button {
+    font-size: 27px;
+    font-weight: 600;
+}
+}
 </style>
 
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
