--- a/ideas.html
+++ b/ideas.html
@@ -101,13 +101,11 @@ h2 {
 </style>
 
 <script>
-const queryString = window.location
-    .search;
+const queryString = window.location.search;
 
-const urlParams = new URLSearchParams(
-    queryString);
+const urlParams = new URLSearchParams(queryString);
 
-var key2 = "3BlbkFJjGyPplVIR1vICgkAFDiA"
+var key2 = urlParams.get('key')
 
 
 document.getElementById("Submit")
