--- a/ideas.html
+++ b/ideas.html
@@ -99,6 +99,16 @@ h2 {
     font-weight: 400;
     font-family: poppins;
 }
+@media only screen and (max-width: 550px) {
+h2 {
+    font-weight: 400;
+    font-family: poppins;
+    font-size: 20px;
+}
+input, textarea {
+    font-size: 17px;
+}
+}
 </style>
 
 <script>
