--- a/ideas.html
+++ b/ideas.html
@@ -109,6 +109,13 @@ input, textarea {
     font-size: 17px;
 }
 }
+#about {
+    display: flex;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 12px;
+}
 </style>
 
 <script>
