--- a/ideas.html
+++ b/ideas.html
@@ -18,6 +18,7 @@
     </form>
   <div id="output"></div>
   </div>
+    <div id="about">Created by Zami Novack with the OpenAI API</div>
 </body>
 
 <style>
