--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@ body, .bgImage {
 <div id="main">
 	<h1>Stuff</h1>
 	<div id="theStuff">
-	<a href="http://stuff.shneurnovack.com/move.html" class="button">Movable Div</a>
-	<a href="https://stuff.shneurnovack.com/game1.html" class="button">Obstacle Game</a>
-	<a href="https://stuff.shneurnovack.com/robotpuppet.html" class="button">Robot Puppet</a>
-	<a href="https://stuff.shneurnovack.com/strangergenerator.html" class="button">Stranger Things Knockoff Generator</a>
+	<a href="/move.html" class="button">Movable Div</a>
+	<a href="/game1.html" class="button">Obstacle Game</a>
+	<a href="/robotpuppet.html" class="button">Robot Puppet</a>
+	<a href="/strangergenerator.html" class="button">Stranger Things Knockoff Generator</a>
 	</div>
   </div>
 <div class="bgImage"></div>
