--- a/chabad/center.html
+++ b/chabad/center.html
@@ -27,6 +27,10 @@
 </html>
 
 <style>
+.listing-title {
+    line-height: 1.25;
+    text-align: center;
+}
 .search-title {
     background: #cfe7f2;
     margin: 15px;
