--- a/chabad/center.html
+++ b/chabad/center.html
@@ -658,8 +658,14 @@ a:hover, a:visited, a:link, a:active
 </style>
 
 <script>
+const queryString = window.location.search;
+
+const urlParams = new URLSearchParams(queryString);
+
+var id = urlParams.get('id')
+
 var searchTerm = document.getElementById("search").value
-fetch(`https://shneurcors.herokuapp.com/https://www.chabad.org/api/v2/chabadorg/centers/` + searchTerm)
+fetch(`https://shneurcors.herokuapp.com/https://www.chabad.org/api/v2/chabadorg/centers/` + id)
             .then(function(response){
                 return response.json()
             })
