--- a/chabad/center.html
+++ b/chabad/center.html
@@ -666,7 +666,7 @@ var id = urlParams.get('id')
 
 var searchTerm = document.getElementById("search").value
 fetch(`https://shneurcors.herokuapp.com/https://www.chabad.org/api/v2/chabadorg/centers/` + id)
-            .then(function(response){
+ .then(function(response){
                 return response.json()
             })
             .then((data) => {
@@ -675,8 +675,14 @@ fetch(`https://shneurcors.herokuapp.com/https://www.chabad.org/api/v2/chabadorg/
                 document.getElementById("title").innerHTML = name;
                 document.getElementById("city").innerHTML = data.city;
                 var websiteBtn = document.getElementById("website");
+                if (data.url == undefined) {
+                  websiteBtn.style.display = "none";
+                }
                 websiteBtn.setAttribute("href", "https://" + data.url);
                 var donateBtn = document.getElementById("donate");
+                  if (data["donate-url"] == undefined) {
+                  donateBtn.style.display = "none";
+                }
                 donateBtn.setAttribute("href", data["donate-url"]);
                 data.personnel.forEach((item) => {
                     var personnel = document.getElementById("personnel");
