--- a/index.html
+++ b/index.html
@@ -293,12 +293,10 @@ body, .bgImage {
 </style>
 
 <div id="main">
-	<h1>Stuff</h1>
+	<h1>Experiments</h1>
 	<div id="theStuff">
-	<a href="/move.html" class="button">Movable Div</a>
-	<a href="/game1.html" class="button">Obstacle Game</a>
-	<a href="/robotpuppet.html" class="button">Robot Puppet</a>
 	<a href="/strangergenerator.html" class="button">Stranger Things Knockoff Generator</a>
+	<a href="/ideas?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Idea Generator</a>
 	</div>
   </div>
 <div class="bgImage"></div>
