--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <style>
+@media only screen and (max-width: 600px) {
+h1 {
+    font-size: 10vw;
+}
+}
 .button {
     width: 200px!important;
 }
