--- a/charidy.html
+++ b/charidy.html
@@ -6,6 +6,10 @@
 
 <style>
 .dedication {     font-size: 13px;     text-align: center;     line-height: 1.2; } .charidy_list {     display: flex;     justify-content: center;     flex-wrap: wrap;     align-content: center;     align-items: stretch;     margin: auto; } .charidy_list-item {     display: flex;     flex-direction: column;     margin: 18px;     background: #ffe2e2;     align-items: center;     padding: 13px;     width: 185px;     border-radius: 5px;     font-family: poppins;     color: #ad6262;     justify-content: center;     text-align: center; } .charidy_list-amount {     font-weight: 600;     font-size: 20px;     margin: 1px; } .charidy_section {     display: flex;     align-items: center;     flex-direction: column;     width: 100%;     padding: 28px 0px; } .charidy_title {     font-family: poppins;     color: #ad6262;     justify-content: center;     text-align: center;     font-weight: 600;     font-size: 27px; } .other-input {     width: 100% !important;     color: #ad6262;     background-color: #ffe2e254;     border: solid 1px #ad6262;     border-radius: 3px; } .input-flex {     display: flex;     width: 78%;     align-items: center; } .donate-options .charidy_list-item {     background: #fff; } .charidy_section.donate-options {     background: #ffe2e2; }
+body {
+    background: #fff !important;
+    margin: 0 !important;
+}
 </style>
 
 <script>
