--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ body, .bgImage {
 	<div id="theStuff">
 	<a href="/strangergenerator.html" class="button">Stranger Things Knockoff Generator</a>
 	<a href="/ideas?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Idea Generator</a>
+        <a href="/titles?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Clickbait Title Generator</a>
 	</div>
   </div>
 <div class="bgImage"></div>
