--- a/ai.html
+++ b/ai.html
@@ -1,6 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Experiments</title>
+  <title>AI Stuff</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -102,11 +102,11 @@ body, .bgImage {
 
 <body>
 <div id="main">
-	<h1>Experiments</h1>
+	<h1>AI Stuff</h1>
 	<div id="theStuff">
-	<a href="/strangergenerator.html" class="button">Stranger Things Knockoff Generator</a>
 	<a href="/ideas?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Idea Generator</a>
-  <a href="/titles?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Clickbait Title Generator</a>
+        <a href="/titles?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Clickbait Title Generator</a>
+        <a href="/adcopy?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Ad Copy Generator</a>
 	</div>
   </div>
 <div class="bgImage"></div>
