--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@ body, .bgImage {
 	<h1>Experiments</h1>
 	<div id="theStuff">
 	<a href="/strangergenerator.html" class="button">Stranger Things Knockoff Generator</a>
-	<a href="/ideas?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Idea Generator</a>
-        <a href="/titles?key=3BlbkFJjGyPplVIR1vICgkAFDiA" class="button">AI Clickbait Title Generator</a>
+	<a href="/ai" class="button">AI Stuff</a>
 	</div>
   </div>
 <div class="bgImage"></div>
