--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ div#main {
     width: 100%;
     background: #ffffff78;
     margin-bottom: 10px;
-    background-size: cover;
-    background-position: center;
+    background-size: cover !important;
+    background-position: center !important;
     content: "";
 }
 .button {
