--- a/ai.html
+++ b/ai.html
@@ -90,7 +90,7 @@ body, .bgImage {
 }
  .bgImage {
 	 position: absolute;
-	 background: #fff;
+         background: #00a6ff;
 	 background-size: cover;
 	 background-position: top;
 	 -webkit-filter: grayscale(70%);
