--- a/ai.html
+++ b/ai.html
@@ -100,15 +100,10 @@ body, .bgImage {
 	 width: 100%;
 	 overflow: hidden;
 }
- .bgImage {
-	 position: absolute;
-         background: #00a6ff;
-	 background-size: cover;
-	 background-position: top;
-	 -webkit-filter: grayscale(70%);
-	/* Safari 6.0 - 9.0 */
-	 filter: grayscale(70%);
-	 z-index: -1;
+.bgImage {
+    background: #fb5c35;
+    filter: opacity(0.2);
+    background: linear-gradient(129deg, rgba(250,0,123,1) 0%, rgba(252,160,0,1) 100%);
 }
 </style>
 
