--- a/ai.html
+++ b/ai.html
@@ -98,11 +98,11 @@ h1 {
 #main {
     background: #ffffffa1;
     z-index: 1000;
-    max-height: 80%;
+    height: 80%;
     position: absolute;
-    max-width: 50%;
+    width: 50%;
     display: flex;
-    left: 0;
+    left: 50%;
     right: 0;
     top: 0;
     bottom: 0;
