--- a/ai.html
+++ b/ai.html
@@ -103,9 +103,7 @@ h1 {
     width: 50%;
     display: flex;
     left: 25%;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    top: 8%;
     box-shadow: rgb(255 255 255 / 10%) 0px 1px 1px 0px inset, rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px;
     backdrop-filter: blur(10px);
     justify-content: flex-start;
