--- a/ai.html
+++ b/ai.html
@@ -7,6 +7,8 @@
     $( function() {
     $( "#main" ).draggable();
     } );
+	    
+    document.getElementById("main").style.resize = "both";
     </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
