--- a/ai.html
+++ b/ai.html
@@ -63,7 +63,9 @@ h1 {
 }
 @media only screen and (max-width: 600px) {
 div#main {
-    max-width: 80%!important;
+ #main {
+    width: 80% !important;
+    left: 10%;
 }
 }
 .button:hover {
