--- a/ai.html
+++ b/ai.html
@@ -64,7 +64,7 @@ h1 {
 @media only screen and (max-width: 600px) {
  #main {
     width: 80% !important;
-    left: 10%;
+    left: 10% !important;
 }
 }
 .button:hover {
