--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ body, .bgImage {
 	<h1>Experiments</h1>
 	<div id="theStuff">
 	<a href="/strangergenerator.html" class="button stkg">Stranger Things Knockoff Generator</a>
-	<a href="/ai" class="button">AI Stuff</a>
+	<a href="/ai" class="button ai">AI Stuff</a>
 	</div>
   </div>
 <div class="bgImage"></div>
