--- a/mobileno.html
+++ b/mobileno.html
@@ -1,2 +1,2 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<p style="text-align: center;"><span style="font-size:28px;">This&nbsp;doesn&#39;t work on mobile</span></p>
+<p style="text-align: center;"><span style="font-size:28px;">This&nbsp;doesn&#39;t work on mobile yet...</span></p>
