--- a/robotpuppet.html
+++ b/robotpuppet.html
@@ -1,4 +1,4 @@
-  <p id="text">Control by holding and draging the bottom right corder of the mouth</p>
+  <p id="text">Control by holding and draging the bottom right corner of the mouth</p>
 <div id="main">
 <div id="face">
   <div id="eyeC">
