--- a/index.html
+++ b/index.html
@@ -323,8 +323,9 @@ body, .bgImage {
 <div id="main">
 	<h1>Experiments</h1>
 	<div id="theStuff">
-	<a href="/ai" class="button ai">AI Stuff</a>
-	</div>
+        <a href="/ai" class="button ai">AI Stuff</a>
+        <a href="/randomstring.html" class="button">Random String Generator</a>
+        </div>
   </div>
 <div class="bgImage"></div>
 <svg class="blobCont">
