--- a/strangergenerator.html
+++ b/strangergenerator.html
@@ -1,7 +1,7 @@
 <head>
 <title>Stranger Things Knockoff Generator</title>
 </head>
-<div id="credit">Created by Zami Novack from code by Chloe Umble and Daniel Eden</div>
+<div id="credit">Created by Zami Novack</div>
 <div class="st">
   <i class="decorator full"></i>
   <span id="word1" class="w full js-w1">
